# cmake_template

./: CMakeLists.txt  Readme.md
include/: myclass.h
src/: CMakeLists.txt  myclass.cpp
test/: CMakeLists.txt  main.cpp
